add hompage and product

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <span class="nav-icon">
                 <i class="fas fa-bars"></i>
             </span>
-            <h1>Fresh Fruits</h1>
+            <!-- <h1>Fresh Fruits</h1> -->
+            <img src="./images/logo.PNG" alt="store logo">
             <div class="cart-btn">
                 <span class="nav-icon">
                     <i class="fas fa-cart-plus"></i>
@@ -24,6 +25,35 @@
             </div>
         </div>
     </nav>
+
+    <!-- hero -->
+    <header class="hero">
+        <div class="banner">
+            <h1 class="banner-title">Pick your Fav Fruits</h1>
+            <button class="banner-btn">Shop Now</button>
+        </div>
+    </header>
+
+    <!-- products -->
+    <section class="products">
+        <div class="section-title">
+            <h2>Fruits</h2>
+        </div>
+        <div class="products-center">
+            <!-- single product -->
+            <article class="product">
+                <div class="img-container">
+                    <img src="/images/product-1.jpg" alt="product" class="product-img">
+                    <button class="bag-btn" data-id="1">
+                        <i class="fas fa-shopping-cart">Add to Bag</i>
+                    </button>
+                </div>
+
+                <h3>Strawberries</h3>
+                <h4>$2.99</h4>
+            </article>
+        </div>
+    </section>
 
     <script src="app.js"></script>
 </body>
