--- a/index.html
+++ b/index.html
@@ -52,8 +52,42 @@
                 <h3>Strawberries</h3>
                 <h4>$2.99</h4>
             </article>
+
         </div>
     </section>
+    <!-- cart -->
+    <div class="cart-overlay">
+        <div class="cart">
+            <span class="close-cart">
+                <i class="fas fa-window-close"></i>
+            </span>
+            <h2>Your Cart</h2>
+            <div class="cart-content">
+                <!-- cart item -->
+                <div class="cart-item">
+                    <img src="./images/product-1.jpg" alt="product">
+                    <div>
+                        <h4>Bananas</h4>
+                        <h5>$0.77</h5>
+                        <span class="remove-item">Remove</span>
+                    </div>
+                    <div>
+                        <i class="fas fa-chevron-up"></i>
+                        <p class="item-amount">1</p>
+                        <i class="fas fa-chevron-down"></i>
+                    </div>
+                </div>
+                <!-- end of cart item -->
+                <div class="cart-footer">
+                    <h3>Your Total: $ <span class="cart-total">0</span></h3>
+                    <button class="clear-cart banner-btn">Clear Cart</button>
+                </div>
+            </div>
+
+
+        </div>
+
+    </div>
 
     <script src="app.js"></script>
 </body>
