add display product dynamically

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="products-center">
             <!-- single product -->
-            <article class="product">
+            <!-- <article class="product">
                 <div class="img-container">
                     <img src="/images/product-1.jpg" alt="product" class="product-img">
                     <button class="bag-btn" data-id="1">
@@ -51,7 +51,7 @@
 
                 <h3>Strawberries</h3>
                 <h4>$2.99</h4>
-            </article>
+            </article> -->
 
         </div>
     </section>
