add product to cart and save/show cart

--- a/index.html
+++ b/index.html
@@ -64,19 +64,9 @@
             <h2>Your Cart</h2>
             <div class="cart-content">
                 <!-- cart item -->
-                <div class="cart-item">
-                    <img src="./images/product-1.jpg" alt="product">
-                    <div>
-                        <h4>Bananas</h4>
-                        <h5>$0.77</h5>
-                        <span class="remove-item">Remove</span>
-                    </div>
-                    <div>
-                        <i class="fas fa-chevron-up"></i>
-                        <p class="item-amount">1</p>
-                        <i class="fas fa-chevron-down"></i>
-                    </div>
-                </div>
+                <!-- <div class="cart-item">
+                    
+                </div> -->
                 <!-- end of cart item -->
                 <div class="cart-footer">
                     <h3>Your Total: $ <span class="cart-total">0</span></h3>
