--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
                     
                 </div> -->
                 <!-- end of cart item -->
+            </div>
                 <div class="cart-footer">
                     <h3>Your Total: $ <span class="cart-total">0</span></h3>
                     <button class="clear-cart banner-btn">Clear Cart</button>
                 </div>
-            </div>
+            <!-- </div> -->
 
 
         </div>
