--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <h3>Your Total: $ <span class="cart-total">0</span></h3>
                     <button class="clear-cart banner-btn">Clear Cart</button>
                 </div>
-            <!-- </div> -->
+            </div>
 
 
         </div>
