--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
